--- a/translations/nl-BE.yaml
+++ b/translations/nl-BE.yaml
@@ -227,7 +227,7 @@ login:
   sign-2-2: getekend en verzegeld
   sign-3-1: documenten kunnen op elk moment
   sign-3-2: gevalideerd worden op echtheid
-  mandatee-management: Mandatenbeheer
+  mandate-management: Mandatenbeheer
   mandate-description: Vul automatisch de mandatendatabank aan bij het publiceren van uw notulen.
   mandate-1-1: De tekstverwerker
   mandate-1-2: herkent automatisch de juiste mandatarissen
