--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -205,8 +205,8 @@ login:
   problems-text: Unable to log in? Please contact your internal administrator. If a problem occurs, contact
   gebruikersbeheer: gebruikersbeheer Vlaanderen
   signing-instructions: Signing in is done in a pop-up; make sure your browser settings are correct if it does not appear.
-  functionality-heading: The functionalities of Gelink Notuleren
-  present-in-manual: All functionalities, along with helpful tips & tricks, can be viewed in manual.
+  functionality-heading: The functionalities of Gelinkt Notuleren
+  present-in-manual: All functionalities, along with helpful tips & tricks, can be viewed in the manual.
   view-manual: View the manual here.
   meeting-heading: Meeting
   record-your-session: Record your session using the online word processing program.
