--- a/translations/nl-BE.yaml
+++ b/translations/nl-BE.yaml
@@ -211,7 +211,7 @@ login:
   view-manual: Bekijk de handleiding hier.
   meeting-heading: Notuleren
   record-your-session: Notuleer uw zitting met behulp van het online tekstverwerkingsprogramma.
-  meeting-1-1: Gebruik de de ingebouwde
+  meeting-1-1: Gebruik de ingebouwde
   meeting-1-2: sjablonen
   meeting-1-3: om besluiten te vormen;
   meeting-2-1: link naar de juiste
