--- a/translations/nl-BE.yaml
+++ b/translations/nl-BE.yaml
@@ -485,6 +485,9 @@ publish:
   publish-button-label: Onderteken en publiceer
   toggle-all-public-label: Maak de inhoud van alle agendapunten publiek
   serious-error: Er heeft zich een fout voorgedaan, gelieve op een later tijdstip nogmaals te proberen. Als de fout aanhoudt contacteer GelinktNotuleren@vlaanderen.be met onderstaande informatie.
+  public-version: Publieke versie
+  need-second-signature: Tweede ondertekening vereis
+  signed-version: Ondertekende versie
 
 published-resource:
   published-by-label: Gepubliceerd door
