--- a/translations/nl-BE.yaml
+++ b/translations/nl-BE.yaml
@@ -358,6 +358,7 @@ meeting-form:
   fifth-section-not-filled-warning: Bewerk je besluiten en beheer de stemmingen
   bestuursorgan-not-selected-warning: Alvorens u verder kan gaan, dient de zitting eerst informatie te hebben over het bestuursorgaan.
   notulen-published: Notulen gepubliceerd
+  notulen-signed: Notulen ondertekend
 
 meetings:
   publish:
