--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -495,6 +495,8 @@ publish:
   in-preparation: In preparation
   public: Public
   non-public: Not public
+  delete-signature: Delete signature
+  delete-signature-warning: Are you sure you want to delete your signature?
 
 published-resource:
   published-by-label: Published by
