--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -365,6 +365,7 @@ meetings:
     decision-list: Decision list
     extracts: Extracts
     document: Document
+    publication-actions: Publication actions
   delete:
     delete: Delete
     confirm-message: Are you sure you want to delete this meeting
@@ -449,6 +450,20 @@ print-view:
   manual: manual
   save-2: . This information (above the dotted line) will not show up on the print or PDF.
   signed-by: Signed by
+
+publication-actions:
+  document: Document
+  action: Action
+  date: Date
+  user: User
+  hash: Hash
+  planned-agenda: Planned Agenda
+  suplemental-agenda: Supplemental Agenda
+  urgent-agenda: Urgent Agenda
+  notulen: Document
+  decision-list: Decision list 
+  deleted: Deleted
+  return: Back to all publication actions
 
 publication-confirmation:
   modal-title: "Confirm publication of "
