--- a/translations/nl-BE.yaml
+++ b/translations/nl-BE.yaml
@@ -463,6 +463,7 @@ publication-actions:
   urgent-agenda: Spoedeisende Agenda
   notulen: Notulen
   decision-list: BesluitenLijst
+  treatment: Uitreksel
   deleted: verwijderd
   return: Terug naar alle publicatie acties
 
