--- a/translations/nl-BE.yaml
+++ b/translations/nl-BE.yaml
@@ -514,6 +514,7 @@ publish:
   non-public: Niet publiek
   delete-signature: Ondertekening verwijderen
   delete-signature-warning: Bent u zeker dat u uw ondertekening wil verwijderen?
+  deleted: Verwijderd
 
 published-resource:
   published-by-label: Gepubliceerd door
