--- a/translations/nl-BE.yaml
+++ b/translations/nl-BE.yaml
@@ -111,7 +111,7 @@ editor-document-title:
   placeholder: Naamloos document
   agendapoint-title: agendapunt titel
   change-title: Titel wijzigen
-
+  saved: Gered
 inbox:
   loading: Aan het laden
   patience-text: Bedankt voor uw geduld.
