upgrade to ember-acmidm 2.0.0-beta.1 with switch-login disabled

--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -21,6 +21,11 @@ administrative-body-select:
   period: "period"
   not-applicable: n/a
 
+auth:
+  login: Login
+  switch-administrative-unit: Switch Administrative Unit
+  logout: Logout
+
 application-header:
   switch-administrative-unit: Switch Administrative Unit
   logout: Logout
