--- a/translations/nl-BE.yaml
+++ b/translations/nl-BE.yaml
@@ -376,6 +376,9 @@ meetings:
   publish:
     agenda: 
       title: Agenda
+      planned-agenda: Ontwerpagenda
+      supplemental-agenda: Aanvullende Agenda
+      urgent-agenda: Spoedeisende Agenda
     decision-list: 
       title: Besluitenlijst
     extracts: 
