improve translations of document publish page

--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -386,6 +386,8 @@ meetings:
       title: Extracts
     document: 
       title: Document
+      preview: Document preview
+      make-agendapoint-content-public: Publish content of agendapoint
     publication-actions: 
       title: Publication actions
       document: Document
