--- a/translations/nl-BE.yaml
+++ b/translations/nl-BE.yaml
@@ -391,6 +391,10 @@ meetings:
       title: Publicatie acties
       document: Document
       action: Actie
+      actions:
+        publish: Publicatie
+        sign: Ondertekening
+        delete-signature: Verwijdering ondertekening
       date: Datum
       user: Uitvoerder
       hash: Hash
