add a document-type-filter dropdown to the publication actions index page

--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -404,8 +404,11 @@ meetings:
       urgent-agenda: Urgent Agenda
       notulen: Document
       decision-list: Decision list
-      treatment: Treatment
+      extract: Extract
       deleted: Deleted
+      document-type-filter:
+        label: Document type
+        placeholder: Select an option
       return: Back to all publication actions
       details: Details
   delete:
