fix translation issues on publication actions page

--- a/translations/nl-BE.yaml
+++ b/translations/nl-BE.yaml
@@ -402,8 +402,8 @@ meetings:
       suplemental-agenda: Aanvullende Agenda
       urgent-agenda: Spoedeisende Agenda
       notulen: Notulen
-      decision-list: BesluitenLijst
-      treatment: Uitreksel
+      decision-list: Besluitenlijst
+      treatment: Uittreksel
       deleted: verwijderd
       return: Terug naar alle publicatie acties
       details: Details
